--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "basic webpack run environment",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack -d --watch",
+    "dev": "webpack-dev-server",
     "prod": "webpack -p"
   },
   "repository": {
@@ -18,7 +18,13 @@
   "author": "Greta Kavaliauskaite",
   "license": "ISC",
   "devDependencies": {
+    "css-loader": "^0.28.4",
+    "extract-text-webpack-plugin": "^2.1.2",
     "html-webpack-plugin": "^2.28.0",
-    "webpack": "^2.2.0"
+    "node-sass": "^4.5.3",
+    "sass-loader": "^6.0.5",
+    "style-loader": "^0.18.2",
+    "webpack": "^2.2.0",
+    "webpack-dev-server": "^2.4.5"
   }
 }
